--- a/src/partials/hotel/modal-reserve-room.html
+++ b/src/partials/hotel/modal-reserve-room.html
@@ -15,15 +15,15 @@
           <label class="mr-input-after-text">На кого забронювати номер?</label>
         </div>
         <div class="mr-input-box">
-          <input class="mr-modal-input " type="tel" name="tel" placeholder="+38 (___) ___-__-__" required>
-          <label class="mr-input-after-text">Номер телефону</label>
+          <input class="mr-modal-input " type="tel" name="tel" id="ven" placeholder="+38 (___) ___-__-__" required>
+          <label class="mr-input-after-text" id="ven">Номер телефону</label>
         </div>
       </div>
 
       <div class="mr-tablet-version">
         <div class="mr-input-box">
           <div class="mr-input-wrap">
-            <select class="mr-modal-input " name="category-room" id="category-room">
+            <select class="mrd-modal-input" name="category-room" id="category-room">
               <option value="Двомісний люкс">Двомісний люкс</option>
               <option value="жлоб">єконом на собі</option>
               <option value="для путлера">одиночна камера</option>
@@ -40,7 +40,7 @@
       <div class="mr-tablet-version">
         <div class="mr-input-box">
           <div class="mr-input-wrap">
-            <select class="mr-modal-input mr-text-input" name="arrival-data" id="arrival-data">
+            <select class="mrd-modal-input mr-text-input" name="arrival-data" id="arrival-data">
               <option value="Сьогодні">Сьогодні</option>
               <option value="День Перемоги над рашизмом">День Перемоги над рашизмом</option>
               <option value="День Незалежності України">День Незалежності України</option>
@@ -54,7 +54,7 @@
         </div>
         <div class="mr-input-box">
           <div class="mr-input-wrap">
-            <select class="mr-modal-input mr-text-input" name="leave" id="leave">
+            <select class="mrd-modal-input mr-text-input" name="leave" id="leave">
               <option value="Сьогодні">Сьогодні</option>
               <option value="Ніколи">Ніколи</option>
               <option value="коли Катя перестане їсти на ніч">День Перемоги над рашизмом</option>
