--- a/src/css/components/modal_v2/modal-reserve-room.css
+++ b/src/css/components/modal_v2/modal-reserve-room.css
@@ -28,7 +28,7 @@
 
   /*  Установаем ширину окна  */
   width: 100%;
-  max-width: 500px;
+  max-width: 414px;
 
   /*  Центрируем и задаем z-index */
   position: fixed;
@@ -134,18 +134,17 @@
   color: #000000;
 }
 
-.mr-modal-input::placeholder {
+.mr-modal-input::placeholder,
+.mrd-modal-input::placeholder {
   font-family: 'Times New Roman', serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.16;
   letter-spacing: 0.05em;
-
   color: #808080;
 }
 
-.mr-text-input {}
+
 
 .mr-form-input {
   margin-top: 30px;
@@ -182,7 +181,7 @@ select {
   padding-right: 15px;
   border: 1px solid #c79002;
   border-radius: 2px;
-  width: 100%;
+  max-width: 100%;
   height: 54px;
   background-color: transparent;
 }
@@ -198,6 +197,29 @@ select {
 .mr-modal-input:active {
   border: 2px solid #c79002;
 }
+
+.mrd-modal-input {
+  padding-left: 12px;
+  padding-right: 15px;
+  border: 1px solid #c79002;
+  border-radius: 2px;
+  width: 100%;
+  height: 54px;
+  background-color: transparent;
+}
+
+.mrd-modal-input:hover,
+.mrd-modal-input:focus,
+.mrd-modal-input:active {
+  border: 2px solid #c79002;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.mrd-modal-input:active {
+  border: 2px solid #c79002;
+}
+
 
 .mr-input-after-text {
   font-family: 'Montserrat', sans-serif;
@@ -249,36 +271,44 @@ select {
 /* ---------------mob version-------------- */
 /* ---------------mob version-------------- */
 @media screen and (min-width: 414px) {
-  .modal-reserv-room {
-    width: 414px;
-  }
+  
 
-  .mr-modal-input {
-    width: 382px;
-  }
+  
 }
 
 /* ---------------Tab version-------------- */
 /* ---------------Tab version-------------- */
 @media screen and (min-width: 1024px) {
   .modal-reserv-room {
+    box-sizing: border-box;
     width: 712px;
     height: auto;
-    padding-left: 60px;
-    padding-right: 60px;
-  }
+    padding: 60px;
+}
+
+.mr-close-btn {
+  position: absolute;
+  right: 24px;
+  top: 24px;
+
+}
 
   .modal-reserv-room>.mr-form-input {
     margin-top: 40px;
   }
+
+
 
   .mr-modal-title {
     font-size: 40px;
     line-height: 46px;
   }
 
+  .mr-input-box {
+    width: calc((100% - 20px) / 2);
+  }
+
   .mr-modal-input {
-    width: 288px;
     height: 64px;
   }
 
@@ -286,6 +316,10 @@ select {
     display: flex;
     gap: 16px;
     flex-direction: row;
+  }
+
+  .mr-input-after-text {
+    text-align: left;
   }
 
   .mr-tablet-version:nth-child(2) {
@@ -301,4 +335,6 @@ select {
     gap: 16px;
     margin-top: 28px;
   }
+
+
 }
