--- a/src/css/components/modal_v2/modal-reserve-table.css
+++ b/src/css/components/modal_v2/modal-reserve-table.css
@@ -102,7 +102,7 @@ select {
     padding-right: 15px;
     border: 1px solid #c79002;
     border-radius: 2px;
-    width: 100%;
+    max-width: 100%;
     height: 54px;
     background-color: transparent;
 }
@@ -115,6 +115,31 @@ select {
         0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.mt-modal-input:active {
+    border: 2px solid #c79002;
+}
+
+.mtd-modal-input {
+    padding-left: 12px;
+    padding-right: 15px;
+    border: 1px solid #c79002;
+    border-radius: 2px;
+    width: 100%;
+    height: 54px;
+    background-color: transparent;
+}
+
+.mtd-modal-input:hover,
+.mtd-modal-input:focus,
+.mtd-modal-input:active {
+    border: 2px solid #c79002;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.mtd-modal-input:active {
+    border: 2px solid #c79002;
+}
 .mt-modal-input::placeholder {
     font-family: 'Times New Roman', serif;
     font-style: normal;
@@ -143,6 +168,13 @@ select {
     gap: 8px;
 }
 
+
+.mt-modal-confirm-btn {
+    width: 100%;
+    height: 64px;
+    margin-top: 40px;
+}
+
 .mt-modal-confirm-btn {
     border: 1px solid #f3c653;
     border-radius: 2px;
@@ -153,9 +185,6 @@ select {
     line-height: 1.2;
     color: #ffffff;
     background-color: #000000;
-    width: 100%;
-    height: 64px;
-    margin-top: 40px;
 }
 
 .mt-modal-confirm-btn:hover,
@@ -185,19 +214,14 @@ select {
 /* ---------------mob version-------------- */
 /* ---------------mob version-------------- */
 @media screen and (min-width: 414px) {
-    .modal-reserv-tab {
-        width: 414px;
-    }
-
-    .mt-modal-input {
-        width: 382px;
-    }
+    
 }
 
 /* ---------------Tab version-------------- */
 /* ---------------Tab version-------------- */
 @media screen and (min-width: 1024px) {
     .modal-reserv-tab {
+        box-sizing: border-box;
         width: 712px;
     }
 
