--- a/src/css/homepage/section5.css
+++ b/src/css/homepage/section5.css
@@ -72,7 +72,7 @@
 }
 
 .contacts-thumb-two {
-    width: 260px;
+    width: 264px;
     height: 40px;
 }
 
@@ -111,9 +111,8 @@
 
 .contacts-icon-link {
     display: block;
-    width: 24px;
-    height: 24px;
-    margin: 8px;
+    margin-right: 8px;
+    margin-left: 8px;
 }
 
 .contacts-icon {
@@ -219,6 +218,11 @@
         margin-bottom: 8px;
     }
 
+.contacts-icon-link {
+    margin-left: 0;
+
+}
+
     .contacts-descr {
         margin-bottom: 52px;
     }
@@ -251,8 +255,15 @@
         margin-right: 0px;
     }
 
+.contacts-thumb-three {
+    display: flex;
+    gap: 16px;
+
+}
+
+
     .contacts-link-second {
-        margin-left: 16px;
+     
     }
 
     .contacts-address-thumb {
