--- a/src/css/homepage/section5.css
+++ b/src/css/homepage/section5.css
@@ -172,6 +172,7 @@
     display: inline-block;
     max-width: 183px;
     font-family: 'Montserrat';
+    font-style: normal;
     font-size: 16px;
     line-height: calc(20 / 16);
     letter-spacing: 0.01em;
