--- a/src/partials/hotel/section3.html
+++ b/src/partials/hotel/section3.html
@@ -108,7 +108,7 @@
                     </a>
                 </li>
                 <li>
-                    <button type="button" class="btn-mob button-mobile-circle btn-hotel-2">Переглянути ціни</button>
+                    <button type="button" data-modal="5" class="btn-mob button-mobile-circle btn-hotel-2 js-open-modal">Переглянути ціни</button>
                 </li>
             </ul>
         </div>
