--- a/src/partials/hotel/section2.html
+++ b/src/partials/hotel/section2.html
@@ -113,7 +113,7 @@
                     </a>
                 </li>
                 <li>
-                    <button type="button" class="btn-mob button-mobile-circle btn-hotel-2">Переглянути ціни</button>
+                    <button type="button" data-modal="4" class="btn-mob button-mobile-circle btn-hotel-2 js-open-modal">Переглянути ціни</button>
                 </li>
             </ul>
         </div>
